# f.Sentence

./: .gitignore  CNAME  CODEOWNERS  LICENSE  LICENSE.md  README.md  SECURITY.md  pubspec.yaml
.github/workflows/: dart.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/flake/sentence/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
assets/lang/: bg.json  cs.json  el.json  en.json  ga.json  locale_strings.dart  sr.json  tr.json
fake_dynamic_color/: pubspec.yaml
fake_dynamic_color/lib/: fake_dynamic_color.dart
fake_dynamic_color/windows/: CMakeLists.txt
ios/Runner/: Info.plist
lib/: archive.dart  drawing.dart  favorites.dart  folders.dart  home.dart  main.dart  notes_screen.dart  onboarding.dart  pdf.dart  search_bar.dart  settings.dart  theme_settings.dart  trash.dart  welcome_screen.dart
lib/core/: .gitkeep
lib/screens/: onboarding.dart
models/: note.dart
sentence/: empty.txt  pubspec.yaml
sentence/android/app/: build.gradle.kts
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/flutter/ephemeral/.plugin_symlinks/dynamic_color/windows/: CMakeLists.txt  fake_dynamic_color.cpp
windows/runner/: CMakeLists.txt  flutter_window.cpp  flutter_windows.h  main.cpp  resource.h  resources.rc  runner.cpp  runner.h  utils.cpp  utils.h
